# vue-fastapi-firebase-auth

./: .gitignore  README.md  pyproject.toml
api/: main.py
vue-fastapi/: README.md  index.html  package-lock.json  package.json
vue-fastapi/src/: main.js
vue-fastapi/src/components/: Api.vue  FirebaseAuthUI.vue  Signout.vue  Top.vue
vue-fastapi/src/plugins/: axios.js
vue-fastapi/src/router/: index.js
