[tool.poetry]
name = "vue-fastapi-firebase-auth"
version = "0.1.0"
description = ""
authors = ["eryeden <ery.eden@gmail.com>"]
readme = "README.md"
packages = [{include = "vue_fastapi_firebase_auth"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.1"}
firebase-admin = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
